--- a/toc.yaml
+++ b/toc.yaml
@@ -48,7 +48,8 @@ toc:
       - topicgroup:
           label: Enhancing security
           topics:
-          - data-security.md
+          - topic: data-security.md
+            navtitle: Securing your data
           - deployment_model.md
           - dependencies.md
           
