Addition of new service-name property
Value identified from https://cloud.ibm.com/docs/activity-tracker?topic=activity-tracker-cloud_services

This same change needs to be pushed to production.

--- a/toc.yaml
+++ b/toc.yaml
@@ -1,6 +1,7 @@
 toc:
   properties:
     subcollection: sql-query
+    service-name: sql-query
     category: analytics
     audience: service
     href: /docs/sql-query?topic=sql-query-getting-started
