--- a/toc.yaml
+++ b/toc.yaml
@@ -17,7 +17,7 @@ toc:
       topics:
       - getting-started.md
       - sql-query.md
-      - whatsnew.md
+      - release-notes.md
       - hive_metastore.md
       - index_management.md
       - event_streams_landing.md
