Added back whatsnew, will delete it late tomorrow or Saturday

--- a/toc.yaml
+++ b/toc.yaml
@@ -17,6 +17,7 @@ toc:
       topics:
       - getting-started.md
       - sql-query.md
+      - whatsnew.md
       - topic: release-notes.md
         navtitle: Release notes
       - hive_metastore.md
