--- a/toc.yaml
+++ b/toc.yaml
@@ -19,6 +19,7 @@ toc:
       - sql-query.md
       - topic: release-notes.md
         navtitle: Release notes
+      - catalog_management.md
       - hive_metastore.md
       - index_management.md
       - event_streams_landing.md
