updated title to Data Engine

--- a/toc.yaml
+++ b/toc.yaml
@@ -25,7 +25,7 @@ toc:
         - topic: catalog_management.md
           navtitle: Getting started with the catalog
         - topic: hive_metastore.md
-          navtitle: Connecting Apache Spark with the catalog 
+          navtitle: Connecting Apache Spark with Data Engine
       - index_management.md
       - event_streams_landing.md
 
