--- a/toc.yaml
+++ b/toc.yaml
@@ -16,6 +16,13 @@ toc:
       id: learn
       topics:
       - getting-started.md
+      - topicgroup:
+	  label: Overview
+	  topics:
+	  - topic: reading_cos.md
+          navtitle: Reading and writing to Cloud Object Storage
+	  - topic: writing_databases.md
+	    navtitle: Writing to databases
       - sql-query.md
       - topic: release-notes.md
         navtitle: Release notes
@@ -45,6 +52,7 @@ toc:
           - microservice.md
           - db2.md
           - streams_landing_guide.md
+	- querying_json.md
       - disaster_recovery.md
       - topicgroup:
           label: Enhancing security
